# posts

./: .gitignore  Main.hs  Makefile  README.md  literate.cabal  sources.txt
A gentle introduction to Control.Lens/: control-lens.lhs  info
Adjunctions in Haskell/: Adjunction.hs  adjunctions.lhs  info
Getting Started with Lenses/: info  lens-intro.lhs
Just discovered pxz/: info  pxz.lhs
Laziness in Pictures/: Laziness.graffle  info  laziness.lhs
Meta-programming with the Free Monad/: FreeMonad.lhs  Makefile  info
Monads in Pictures/: Monads.graffle  picture-monads.md
Parsing with Haskell and Attoparsec/: attoparsec.lhs  info  parsec-times.txt
Running a fully local Hoogle/: info  local-hoogle.lhs
The fix combinator and recursive lambdas/: fix-combinator.lhs  info
Using Nix on the Mac/: info  using-nix-on-the-mac.md
Using the fix combinator/: using-fix.lhs
