Name: literate

Version:  1.0.0
Synopsis: My custom version of BlogLiterally

Description: My custom version of BlogLiterally.

Homepage:           https://github.com/jwiegley/posts
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Utilities
Build-type:         Simple
Cabal-version:      >= 1.8

Extra-Source-Files: README.md

Executable literate
    Main-is: Main.hs
    Ghc-options: -fllvm -O3

    Build-depends: base >= 4 && < 5, BlogLiterately, pandoc, blaze-html,
                   utf8-string, cmdargs

Source-repository head
  type:     git
  location: https://github.com/jwiegley/posts
