Name: literate

Version:  1.0.0
Synopsis: My custom version of BlogLiterately

Description: My custom version of BlogLiterately.

Homepage:           https://github.com/jwiegley/posts
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Utilities
Build-type:         Simple
Cabal-version:      >= 1.8

Extra-Source-Files: README.md

Executable literate
    Main-is: Main.hs
    Build-depends: base >= 4 && < 6, BlogLiterately, pandoc, blaze-html,
                   utf8-string, cmdargs, lens

Source-repository head
  type:     git
  location: https://github.com/jwiegley/posts
